--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,36 @@
   padding: 0;
 }
 
+body, html {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
-  background: #000;
+  background: url('./../public/2.jpeg') no-repeat center center fixed; 
+  background-size: cover;
   height: 100vh;
   overflow: hidden;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.wrapper{
-  background-color: white;
+.wrapper {
+  background-color: rgba(255, 255, 255, 0.8); /* Mild transparency */
   width: 600px;
   height: 400px;
   margin: auto;
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 20px; /* Add some padding */
+  border-radius: 10px; /* Add rounded corners */
 }
 
 img {
   width: 30%;
 }
-
 
 .App {
   text-align: center;
@@ -50,14 +59,15 @@ img {
   font-size: calc(10px + 2vmin);
   color: white;
 }
-h1{
+
+h1 {
   font-size: 50px;
   font-weight: 600;
-  color: #454545 ;
+  color: #454545;
   margin: 40px 0;
 }
 
-button{
+button {
   width: 120px;
   height: 40px;
   border-radius: 10px;
@@ -65,8 +75,9 @@ button{
   color: white;
   border: 2px solid #454545;
   background-color: #454545;
-  margin: 10% ;
+  margin: 10%;
 }
+
 .App-link {
   color: #61dafb;
 }
